--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -5,7 +5,7 @@
     <gradient
         android:angle="90"
         android:endColor="#00ffffff"
-        android:startColor="#E6000000"
+        android:startColor="#000000"
         android:centerColor="#00ffffff" />
     <corners android:radius="0dp" />
 </shape>
