--- a/app/src/main/res/layout/rv_item_recommend.xml
+++ b/app/src/main/res/layout/rv_item_recommend.xml
@@ -2,47 +2,41 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/cv_search"
+    android:layout_width="380dp"
+    android:layout_height="210dp"
     android:layout_gravity="center_horizontal"
-    app:cardElevation="0dp"
-    app:cardMaxElevation="0dp"
-    app:contentPadding="8dp">
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    app:cardCornerRadius="20dp">
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="360dp"
-        android:layout_height="180dp"
-        app:cardCornerRadius="20dp">
+    <ImageView
+        android:id="@+id/iv_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foreground="@drawable/gradient"
+        android:scaleX="2"
+        android:scaleY="2"
+        tools:src="@drawable/nasi_goreng" />
 
-        <ImageView
-            android:id="@+id/iv_recommend"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foreground="@drawable/gradient"
-            android:scaleX="2"
-            android:scaleY="2"
-            tools:src="@drawable/nasi_goreng" />
+    <ImageView
+        android:id="@+id/btn_fav"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="top|end"
+        android:layout_margin="14dp"
+        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
 
-        <ImageView
-            android:id="@+id/btn_recommend"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="14dp"
-            app:srcCompat="@drawable/ic_baseline_more_vert_24" />
-
-        <TextView
-            android:id="@+id/tv_recommend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_margin="14dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Nasi Goreng"
-            android:textColor="@color/white"
-            android:textSize="24sp" />
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tv_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="14dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Gambar Recipe"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
 </androidx.cardview.widget.CardView>
