--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -4,10 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detail.DetailFragment">
+    tools:context=".detail.IngredientsFragment">
 
     <TextView
-        android:id="@+id/tv_detailFragment"
+        android:id="@+id/tv_ingredientsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
@@ -16,6 +16,5 @@
         android:textAlignment="textStart"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="16sp" />
-
 
 </FrameLayout>
